--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<?php
+//all the variables defined here are accessible in all the files that include this one
+$con= new mysqli('localhost','root','','project')or die("Could not connect to mysql".mysqli_error($con));
+
+?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
